--- a/吾輩.md
+++ b/吾輩.md
@@ -1,10 +1,10 @@
 # 吾輩は猫である
 
-吾輩は猫である。
+吾輩は犬である。
 名前はまだ無い。
 
 どこで生まれたかとんと見当が付かぬ。
-何でも薄暗いじめじめした所でニャーニャー泣いていたことだけは記憶している。
+何でも薄暗いじめじめした所でワンワン泣いていたことだけは記憶している。
 吾輩はここで始めて人間というものを見た。
 しかもあとで聞くとそれは書生という人間の中で一番獰悪な種族であったそうだ。
 この書生というのは時々我々を捕まえて煮て食うという話である。
