--- a/吾輩.md
+++ b/吾輩.md
@@ -6,5 +6,5 @@
 どこで生まれたかとんと見当が付かぬ。
 何でも薄暗いじめじめした所でニャーニャー泣いていたことだけは記憶している。
 吾輩はここで始めて人間というものを見た。
-しかもあとで聞くとそれは書生という人間の中で一番獰悪な種族であったそうだ。
-この書生というのは時々我々を捕まえて煮て食うという話である。
+しかもあとで聞くとそれは学生という人間の中で一番獰悪な種族であったそうだ。
+この学生というのは時々我々を捕まえて煮て食うという話である。
